--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,15 @@
 Package: dominatR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: This package provides different tools for ....
 Version: 0.1.0
-Author: Who wrote it
+Author: Rajendra KC, Simon Lizarazo, David Condrosky, Kevin Van Bortle
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: Under construction this is an attempt and we are learning from mistakes.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+LazyDataCompression: xz
+Depends: 
+    R (>= 2.10)
+Imports: dplyr, forcats, lubridate, purrr, readr, stringr, tibble, tidyr, geomtextpath, ggforce
+RoxygenNote: 7.2.3
