--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,5 @@ LazyData: true
 LazyDataCompression: xz
 Depends: 
     R (>= 2.10)
-Imports: dplyr, forcats, lubridate, purrr, readr, stringr, tibble, tidyr, geomtextpath, ggforce
+Imports: dplyr, forcats, lubridate, purrr, readr, stringr, tibble, tidyr, geomtextpath, ggforce, ggplot2
 RoxygenNote: 7.2.3
