--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,14 @@
 export(MinMaxNorm2)
 export(Qentropy)
 export(circle)
+export(cpm)
 export(entropy)
 export(getCOM)
 export(plotTriangle)
 export(plotTriangle_dummy)
+export(quant.normalization)
+export(rpkm)
+export(tpm)
 export(vrtx)
 import(dplyr)
 import(forcats)
