--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,18 @@
 
 export(MinMax.normalization)
 export(Qentropy)
-export(cpm.normalization)
+export(centmass)
+export(cpm_normalization)
 export(entropy)
 export(getCOM)
+export(minmax_normalization)
 export(plot_Triangle)
 export(plot_Triangle_dummy)
 export(plot_circle)
 export(plot_circle_frequency)
-export(quant.normalization)
-export(rpkm.normalization)
-export(tpm.normalization)
+export(quant_normalization)
+export(rpkm_normalization)
+export(tpm_normalization)
 export(vrtx)
 import(dplyr)
 import(forcats)
