--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,7 @@ LazyData: true
 LazyDataCompression: xz
 Depends: 
     R (>= 2.10)
-Imports: dplyr, forcats, lubridate, purrr, readr, stringr, tibble, tidyr, geomtextpath, ggforce, ggplot2, scales
-Remotes: clauswilke/relayer
+Imports: dplyr, forcats, lubridate, purrr, readr, stringr, tibble, tidyr, geomtextpath, ggforce, ggplot2, scales, ggnewscale
 RoxygenNote: 7.3.2
 Suggests: 
     testthat (>= 3.0.0)
