--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,20 +4,20 @@ export(Qentropy)
 export(centmass)
 export(cpm_normalization)
 export(entropy)
-export(getCOM)
 export(minmax_normalization)
-export(plot_Triangle_dummy)
 export(plot_circle)
 export(plot_circle_frequency)
+export(plot_rope)
 export(plot_triangle)
 export(quant_normalization)
 export(rpkm_normalization)
 export(tpm_normalization)
-export(vrtx)
 import(dplyr)
 import(forcats)
 import(geomtextpath)
 import(ggforce)
+import(ggnewscale)
+import(ggplot2)
 import(lubridate)
 import(purrr)
 import(readr)
