--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,21 @@
 Package: dominatR
-Type: Package
-Title: This package provides different tools for ....
+Title: Feature Dominance-based R Package for genomic data
 Version: 0.1.0
-Author: Simon Lizarazo, Rajendra KC, Kevin Van Bortle
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: Under construction this is an attempt and we are learning from mistakes.
+Author: Simon Lizarazo [aut, cre], Rajendra KC [ctb], Kevin Van Bortle [aut, cre, cph]
+Maintainer: Simon Lizarazo <silizarazoch@gmail.com>,
+            Kevin Van Bortle <kvbortle@illinois.edu>
+Description: 
+  dominatR is an R package for quantifying and visualizing feature dominance in datasets. dominatR makes use    of Shannon's entropy to identify features that are dominated within a particular category or condition.
 License: MIT + file LICENSE
+URL: https://github.com/VanBortleLab/dominatR
 Encoding: UTF-8
-LazyData: true
-LazyDataCompression: xz
+LazyData: false
 Depends: 
-    R (>= 2.10)
-Imports: dplyr, forcats, lubridate, purrr, readr, stringr, tibble, tidyr, geomtextpath, ggforce, ggplot2, scales, ggnewscale
+    R (>= 4.4.0)
+Imports: dplyr, forcats,  lubridate,  purrr,  readr,  stringr,  tibble,  tidyr,  geomtextpath,  ggforce,  ggplot2,  scales,  ggnewscale
 RoxygenNote: 7.3.2
+biocViews: Visualization, Normalization, Classification, GeneExpression
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+BugReports: https://github.com/VanBortleLab/dominatR/issues
