--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(centmass)
 export(cpm_normalization)
 export(entropy)
 export(minmax_normalization)
+export(plot_abacus)
 export(plot_circle)
 export(plot_circle_frequency)
 export(plot_rope)
