--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(plot_triangle)
 export(quant_normalization)
 export(rpkm_normalization)
 export(tpm_normalization)
+import(SummarizedExperiment)
 import(dplyr)
 import(forcats)
 import(geomtextpath)
