--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Encoding: UTF-8
 LazyData: false
 Depends: 
     R (>= 4.4.0)
-Imports: dplyr, forcats,  lubridate,  purrr,  readr,  stringr,  tibble,  tidyr,  geomtextpath,  ggforce,  ggplot2,  scales,  ggnewscale, SummarizedExperiment
+Imports: dplyr, forcats,  lubridate,  purrr,  readr,  stringr,  tibble,  tidyr,  geomtextpath,  ggforce,  ggplot2,  scales,  ggnewscale, SummarizedExperiment, airway
 RoxygenNote: 7.3.2
 biocViews: Visualization, Normalization, Classification, GeneExpression
 Suggests: 
