--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(quant_normalization)
 export(rpkm_normalization)
 export(tpm_normalization)
 import(SummarizedExperiment)
+import(airway)
 import(dplyr)
 import(forcats)
 import(geomtextpath)
