Updates and changes: - Plot Rope, Normalization_minmax, normalization_quantile and normalization_rpkm are included in the analysis and they all accept SE objects. - Testing, documentation and examples were also included for all the functions up to date.
check CMD PASSED

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(plot_circle)
 export(plot_circle_frequency)
 export(plot_rope)
 export(plot_triangle)
-export(quant_normalization)
+export(quantile_normalization)
 export(rpkm_normalization)
 export(tpm_normalization)
 import(SummarizedExperiment)
