No ERRORS upon CMD Check.
All things work without any problem.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,16 @@ export(rpkm_normalization)
 export(tpm_normalization)
 import(SummarizedExperiment)
 import(airway)
+import(dplyr)
+import(forcats)
+import(ggforce)
+import(ggnewscale)
+import(ggplot2)
+import(lubridate)
+import(purrr)
+import(readr)
+import(stringr)
+import(tibble)
+import(tidyr)
+import(tidyverse)
+import(utils)
