--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,8 @@ Suggests:
     BiocStyle,
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    dominatRData
 VignetteBuilder: knitr
 biocViews: Visualization, Normalization, Classification, GeneExpression
 Config/testthat/edition: 3
