--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,39 @@
 Package: dominatR
 Title: Feature Dominance-based R Package for Genomic Data
-Version: 0.1.0
+Version: 0.99.0
 Authors@R: c(
-    person(given = "Simon", family = "Lizarazo", role = c("aut", "cre"), email = "silizarazoch@gmail.com"),
-    person(given = "Ethan", family = "Chen", role = c("ctb"), email = "yitian7@illinois.edu"),
-    person(given = "Rajendra", family = "KC", role = c("ctb")),
-    person(given = "Kevin", family = "Van Bortle", 
-           role = c("aut", "cph"), email = "kvbortle@illinois.edu")
-           )
-Description: dominatR is an R package for quantifying and visualizing feature dominance in datasets.
-    dominatR makes use of entropy-based triangular projections and compositional comparison metrics.
+    person(
+    given = "Simon", 
+    family = "Lizarazo", 
+    role = c("aut", "cre"), 
+    email = "silizarazoch@gmail.com", 
+    comment = c(ORCID = "0009-0001-8974-6225")
+    ),
+    person(
+    given = "Ethan", 
+    family = "Chen", 
+    role = c("ctb"), 
+    email = "yitian7@illinois.edu"
+    ),
+    person(
+    given = "Rajendra", 
+    family = "K C", 
+    role = c("ctb")
+    ),
+    person(
+    given = "Kevin", 
+    family = "Van Bortle", 
+    role = c("ctb"), 
+    email = "kvbortle@illinois.edu")
+    )
+Description: dominatR is an R package for quantifying and visualizing feature dominance in datasets.  dominatR makes use of entropy-based triangular projections and compositional comparison metrics.
 License: MIT + file LICENSE
 URL: https://github.com/VanBortleLab/dominatR
 BugReports: https://github.com/VanBortleLab/dominatR/issues
 Encoding: UTF-8
 LazyData: false
 Depends: 
-    R (>= 4.3.0)
+    R (>= 4.4.0)
 Imports:
     scales,
     airway,
