--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,3 +61,4 @@ VignetteBuilder: knitr
 biocViews: Visualization, Normalization, Classification, GeneExpression
 Config/testthat/edition: 3
 RoxygenNote: 7.3.2
+Config/Needs/website: rmarkdown
