--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,6 +58,8 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
 VignetteBuilder: knitr
+Remotes:
+    github::VanBortleLab/dominatRData
 biocViews: Visualization, Normalization, Classification, GeneExpression
 Config/testthat/edition: 3
 RoxygenNote: 7.3.2
