--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dominatR
 Title: Feature Dominance-based R Package for Genomic Data
-Version: 0.99.2
+Version: 0.99.3
 Date: 2025-09-10
 Authors@R: c(
     person(
@@ -27,33 +27,27 @@ Authors@R: c(
     role = c("aut", "cph"), 
     email = "kvbortle@illinois.edu")
     )
-Description: dominatR is an R package for quantifying and visualizing feature dominance in datasets.  dominatR makes use of entropy-based triangular projections and compositional comparison metrics.
+Description: dominatR is an R package for quantifying and visualizing feature dominance in datasets.  dominatR applies concepts drawn from physics such as center of mass and shannon's entropy to effectively visualize features (e.g. genes) that are present within a specific context or condition. The package integrates, dataframes, matrices and SummerizedExperiment objects and is able to perform common genomic normalization methods. The key aspect is the generation of plots that serve to highlight context-relevant feature dominance.
 License: MIT + file LICENSE
 URL: https://github.com/VanBortleLab/dominatR, https://vanbortlelab.github.io/dominatR/
 BugReports: https://github.com/VanBortleLab/dominatR/issues
 Encoding: UTF-8
 LazyData: false
 Depends: 
-    R (>= 4.4.0)
+    R (>= 4.5.0)
 Imports:
     scales,
-    airway,
     ggnewscale,
-    tidyverse,
     SummarizedExperiment,
     dplyr,
-    forcats,
-    lubridate,
-    purrr,
-    readr,
-    stringr,
-    tibble,
-    tidyr,
+    rlang,
     ggforce,
     geomtextpath,
     ggplot2
 Suggests:
     BiocStyle,
+    airway, 
+    tidyverse,
     knitr,
     rmarkdown,
     testthat (>= 3.0.0),
@@ -61,5 +55,5 @@ Suggests:
 VignetteBuilder: knitr
 biocViews: Visualization, Normalization, Classification, GeneExpression
 Config/testthat/edition: 3
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Config/Needs/website: rmarkdown
