--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,18 +12,57 @@ export(plot_triangle)
 export(quantile_normalization)
 export(rpkm_normalization)
 export(tpm_normalization)
-import(SummarizedExperiment)
-import(airway)
-import(dplyr)
-import(forcats)
-import(ggforce)
-import(ggnewscale)
-import(ggplot2)
-import(lubridate)
-import(purrr)
-import(readr)
-import(stringr)
-import(tibble)
-import(tidyr)
-import(tidyverse)
-import(utils)
+importFrom(SummarizedExperiment,"assay<-")
+importFrom(SummarizedExperiment,"rowData<-")
+importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(SummarizedExperiment,assay)
+importFrom(SummarizedExperiment,assayNames)
+importFrom(SummarizedExperiment,rowData)
+importFrom(dplyr,all_of)
+importFrom(dplyr,any_of)
+importFrom(dplyr,filter)
+importFrom(dplyr,join_by)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,relocate)
+importFrom(dplyr,rowwise)
+importFrom(dplyr,select)
+importFrom(dplyr,select_if)
+importFrom(geomtextpath,geom_textcurve)
+importFrom(ggforce,geom_arc)
+importFrom(ggforce,geom_circle)
+importFrom(ggnewscale,new_scale)
+importFrom(ggnewscale,new_scale_color)
+importFrom(ggnewscale,new_scale_fill)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_equal)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_jitter)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_polygon)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggplot_build)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_alpha)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_x_discrete)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,theme_set)
+importFrom(ggplot2,theme_update)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,polygon)
+importFrom(graphics,text)
+importFrom(rlang,quo)
+importFrom(scales,hue_pal)
+importFrom(stats,lm)
+importFrom(stats,predict)
